--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>برنامج فرز الأصوات - مستشارة يسرا شلتوت</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H1SHDVQ6H9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H1SHDVQ6H9');
+</script>
 </head>
 <body>
     <div class="app-container">
@@ -90,3 +99,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
